--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-card-flip": "^1.1.0",
     "react-dom": "17.0.2"
   }
 }
