--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-card-flip": "^1.1.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.18"
   }
 }
