--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-card-flip": "^1.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-multi-carousel": "^2.6.2",
     "react-responsive-carousel": "^3.2.18",
     "sass": "^1.32.11",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   }
 }
