control methods page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.2.0",
     "react-multi-carousel": "^2.6.2",
     "react-responsive-carousel": "^3.2.18",
+    "reactjs-media": "^1.5.1",
     "sass": "^1.32.11",
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
