--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.6.1",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-back-to-top-button": "0.0.14",
     "react-card-flip": "^1.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
