--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-multi-carousel": "^2.6.2",
     "react-responsive-carousel": "^3.2.18",
     "reactjs-media": "^1.5.1",
+    "reactstrap": "^8.9.0",
     "sass": "^1.32.11",
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
