--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-card-flip": "^1.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-map-gl": "^6.1.12",
     "react-multi-carousel": "^2.6.2",
     "react-responsive-carousel": "^3.2.18",
     "reactjs-media": "^1.5.1",
