--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@agney/react-loading": "^0.1.2",
     "@react-icons/all-files": "^4.1.0",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
