--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-back-to-top-button": "0.0.14",
     "react-card-flip": "^1.1.0",
+    "react-card-flipper": "^1.0.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-map-gl": "^6.1.12",
