add bar chart func

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@agney/react-loading": "^0.1.2",
     "@react-icons/all-files": "^4.1.0",
     "@zeit/next-sass": "^1.0.1",
+    "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
     "gsap": "^3.6.1",
     "jquery": "^3.6.0",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-back-to-top-button": "0.0.14",
     "react-card-flip": "^1.1.0",
     "react-card-flipper": "^1.0.1",
