--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-map-gl-geocoder": "^2.1.6",
     "react-multi-carousel": "^2.6.2",
     "react-responsive-carousel": "^3.2.18",
+    "react-tabs": "^3.2.2",
     "reactjs-media": "^1.5.1",
     "reactstrap": "^8.9.0",
     "sass": "^1.32.11",
