--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive-carousel": "^3.2.18",
     "react-scroll-up": "^1.3.7",
     "react-tabs": "^3.2.2",
+    "react-toastify": "^7.0.4",
     "reactjs-media": "^1.5.1",
     "reactstrap": "^8.9.0",
     "sass": "^1.32.11",
